Add weekly activity stats to the dom

--- a/src/index.html
+++ b/src/index.html
@@ -43,6 +43,9 @@
           <p class='main_activity_steps'> Steps </p>
           <p class='main_activity_minutes'> Minutes </p>
           <p class='main_activity_miles'> Miles </p>
+          <p class='main_activity_week_steps'></p>
+          <p class='main_activity_week_stairs'></p>
+          <p class='main_activity_week_mins'></p>
           <p class='main_activity_goal'></p>
         </section>
       <script type="text/javascript" src='./sleep.js'></script>
